# Gradient-generator

./: CMakeLists.txt  README.md  _buildProject.bat  main.cpp  visualize.py
01_Subcomponents/00_Common/: rgb565.cpp  rgb565.hpp  types.hpp
01_Subcomponents/01_Generator/: generator.cpp  generator.hpp
01_Subcomponents/02_ArgParser/: argparser.cpp  argparser.hpp
01_Subcomponents/03_Interpolation/: interpolation.cpp  interpolation.hpp
01_Subcomponents/04_Display/: display.cpp  display.hpp
01_Subcomponents/05_FileHandler/: filehandler.cpp  filehandler.hpp
